fix: comment textare and post comment button no gap fix.

--- a/assets/css/unminified/skin-1-rtl.css
+++ b/assets/css/unminified/skin-1-rtl.css
@@ -333,7 +333,7 @@
 }
 
 .comments-area .comment-notes,
-.comments-area .comment-form-comment,
+.comments-area .comment-textarea,
 .comments-area .form-allowed-tags {
   margin-bottom: 2.5em;
 }
