--- a/sass/site/blog/single-post-layouts/_comment-form-skin-1.scss
+++ b/sass/site/blog/single-post-layouts/_comment-form-skin-1.scss
@@ -192,7 +192,7 @@
     }
 
     .comment-notes, 
-    .comment-form-comment, 
+    .comment-textarea, 
     .form-allowed-tags {
         margin-bottom: 2.5em;
     }
